# citysim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  citysim.sublime-workspace  cloc.bat  shell.bat  start-work.bat  todo.todo  todo.txt  under-london.sublime-workspace  vcpkg.json
AtLib/: CMakeLists.txt
AtLib/App/: App.cpp  App.h  CMakeLists.txt  Forward.h  Scene.h
AtLib/Assets/: AssetLoader.h  AssetManager.cpp  AssetManager.h  AssetManagerListener.h  AssetMetadata.h  AssetRef.cpp  AssetRef.h  BuiltinAssetLoader.cpp  BuiltinAssetLoader.h  CMakeLists.txt  ContainerAsset.h  Forward.h  Texts.cpp  Texts.h
AtLib/Debug/: CMakeLists.txt  Console.cpp  Console.h  Debug.cpp  Debug.h  DebugAssetLoader.cpp  DebugAssetLoader.h  Keymap.cpp  Keymap.h
AtLib/ECS/: CMakeLists.txt  Component.cpp  Component.h  Entity.cpp  Entity.h  Forward.h  System.cpp  System.h  World.cpp  World.h
AtLib/Gfx/: AssetLoader.cpp  AssetLoader.h  BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  Colour.cpp  Colour.h  Cursor.cpp  Cursor.h  Forward.h  Ninepatch.cpp  Ninepatch.h  OpenGL.cpp  Palette.cpp  Palette.h  RenderBuffer.cpp  RenderBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  TextDocument.cpp  TextDocument.h  Texture.cpp  Texture.h
AtLib/IO/: BinaryFile.cpp  BinaryFile.h  BinaryFileReader.cpp  BinaryFileReader.h  BinaryFileWriter.cpp  BinaryFileWriter.h  CMakeLists.txt  DirectoryIterator.cpp  DirectoryWatcher.cpp  DirectoryWatcher.h  File.h  LineReader.cpp  LineReader.h  Paths.h  WriteBuffer.cpp  WriteBuffer.h
AtLib/Input/: CMakeLists.txt  Input.cpp  Input.h  KeyboardShortcut.cpp  KeyboardShortcut.h
AtLib/Settings/: CMakeLists.txt  Setting.cpp  Setting.h  Settings.cpp  Settings.h  SettingsState.cpp  SettingsState.h
AtLib/Tests/: CMakeLists.txt  TestFunction.cpp  TestHashMap.cpp  TestHashSet.cpp  TestHashTable.cpp  TestOwnedPtr.cpp  TestVariant.cpp
AtLib/UI/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  Drawable.cpp  Drawable.h  Forward.h  Panel.cpp  Panel.h  TextInput.cpp  TextInput.h  Toast.h  UI.cpp  UI.h  UITheme.cpp  UITheme.h  Window.cpp  Window.h
AtLib/Util/: Alignment.h  Allocator.cpp  Allocator.h  Array.h  Array2.h  Basic.h  BitArray.cpp  BitArray.h  Blob.h  CMakeLists.txt  ChunkedArray.h  Concepts.h  DeprecatedPool.h  DoublyLinkedList.h  Endian.h  Enum.h  EnumMap.h  ErrorOr.h  Forward.h  Function.h  Hash.h  HashMap.h  HashSet.h  HashTable.h  Interpolate.h  Locale.cpp  Locale.h  Log.cpp  Matrix4.h  Memory.cpp  Memory.h  MemoryArena.cpp  MemoryArena.h  OccupancyArray.h  Optional.h  OwnPtr.h  OwnedPtr.h  Padding.cpp  Padding.h  Pool.h  (+32 more)
src/: App.cpp  AppState.cpp  AppState.h  AppStatus.h  CMakeLists.txt  about.cpp  about.h  array.cpp  array.h  asset.h  assets.cpp  assets.h  binary_file.cpp  binary_file.h  binary_file_reader.cpp  binary_file_reader.h  binary_file_writer.cpp  binary_file_writer.h  bit_array.cpp  bit_array.h  bitfield.cpp  bitfield.h  bmfont.cpp  bmfont.h  budget.cpp  budget.h  build.bat  build.sh  build_main.cpp  building.cpp  building.h  calendar.h  chunked_array.cpp  chunked_array.h  city.cpp  city.h  cloc.bat  commands.cpp  console.cpp  console.h  (+138 more)
src/App/: App.cpp  App.h  CMakeLists.txt  Forward.h
src/Assets/: Asset.cpp  Asset.h  AssetLoader.h  AssetManager.cpp  AssetManager.h  AssetManagerListener.h  AssetMetadata.cpp  AssetMetadata.h  AssetRef.cpp  AssetRef.h  AssetType.h  BuiltinAssetLoader.cpp  BuiltinAssetLoader.h  CMakeLists.txt  ContainerAsset.cpp  ContainerAsset.h  DeprecatedAsset.cpp  DeprecatedAsset.h  Forward.h  Sprite.h  Texts.cpp  Texts.h
src/Debug/: CMakeLists.txt  Commands.cpp  Console.cpp  Console.h  Debug.cpp  Debug.h  DebugAssetLoader.cpp  DebugAssetLoader.h  Keymap.cpp  Keymap.h
src/Gfx/: AssetLoader.cpp  AssetLoader.h  BMFont.cpp  BMFont.h  BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  Camera.cpp  Camera.h  Colour.cpp  Colour.h  Cursor.cpp  Cursor.h  Forward.h  Ninepatch.cpp  Ninepatch.h  OpenGL.cpp  OpenGL.h  Palette.cpp  Palette.h  RenderBuffer.cpp  RenderBuffer.h  RenderItem.h  Renderer.cpp  Renderer.h  SDL.cpp  SDL.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  TextDocument.cpp  TextDocument.h  Texture.cpp  Texture.h
src/IO/: BinaryFile.cpp  BinaryFileReader.cpp  BinaryFileReader.h  BinaryFileWriter.cpp  BinaryFileWriter.h  CMakeLists.txt  DirectoryIterator.cpp  DirectoryIterator.h  DirectoryWatcher.cpp  DirectoryWatcher.h  File.cpp  File.h  Forward.h  LineReader.cpp  LineReader.h  Paths.cpp  SavedGames.cpp  SavedGames.h  WriteBuffer.cpp  WriteBuffer.h
src/Input/: CMakeLists.txt  Input.cpp  Input.h
src/Menus/: About.cpp  CMakeLists.txt  Credits.cpp  Credits.h  MainMenu.cpp  MainMenu.h  SaveFile.cpp  SaveFile.h  SavedGames.cpp  SavedGames.h
src/Settings/: CMakeLists.txt  Forward.h  Setting.cpp  Setting.h  Settings.cpp  Settings.h  SettingsChangeListener.h  SettingsState.cpp  SettingsState.h
src/Sim/: AssetLoader.cpp  AssetLoader.h  Budget.cpp  Budget.h  Building.cpp  Building.h  BuildingCatalogue.cpp  BuildingCatalogue.h  BuildingDefs.cpp  BuildingDefs.h  BuildingRef.cpp  BuildingRef.h  CMakeLists.txt  City.cpp  City.h  Crime.cpp  Crime.h  DirtyRects.cpp  DirtyRects.h  DragState.cpp  DragState.h  Education.cpp  Education.h  Effect.cpp  Effect.h  Entity.h  Fire.cpp  Fire.h  Forward.h  Game.cpp  Game.h  GameClock.cpp  GameClock.h  Health.cpp  Health.h  LandValue.cpp  LandValue.h  Layer.cpp  Layer.h  Pollution.cpp  (+18 more)
src/UI/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  Drawable.cpp  Drawable.h  Forward.h  Panel.cpp  Panel.h  TextInput.cpp  TextInput.h  Toast.cpp  Toast.h  UI.cpp  UI.h  UITheme.cpp  UITheme.h  Window.cpp  Window.h
src/Util/: Alignment.cpp  Alignment.h  Array.h  Array2.h  Assert.h  Badge.h  Basic.h  BitArray.cpp  BitArray.h  Blob.cpp  Blob.h  CMakeLists.txt  ChunkedArray.h  Concepts.h  Deferred.h  DeprecatedFlags.h  DeprecatedLinkedList.h  DeprecatedPool.h  DoublyLinkedList.h  Endian.h  Enum.h  EnumMap.h  ErrorOr.h  Flags.h  Forward.h  Function.h  (+51 more)
tests/: CMakeLists.txt  TestOwnPtr.cpp  TestOwnedPtr.cpp  TestVariant.cpp
(+167 files in other folders)
